# AquaLampDriver

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
CMake/: STM32-Toolchain.cmake
CMake/Modules/: FindSTM32F10x.cmake
build_system/: runner.py
build_system/builders/: builder_factory.py  docker_builder_factory.py  native_builder_factory.py  native_builders.py
cmake/: STM32-Toolchain.cmake
cmake/Modules/: FindSTM32F10x.cmake
cube/: aqua.ioc
doc/: App.plantuml  pinout.txt  sunriseAlgorithm.txt  sunriseCalculator.xlsx
lib/: CMakeLists.txt
lib/CRCpp/: CMakeLists.txt
lib/boost/: CMakeLists.txt
lib/gsl/: CMakeLists.txt
lib/gui/: IWidget.hpp  area.hpp  button.hpp  element.hpp  gui.hpp  image.hpp  menu.hpp  widgetBase.hpp  window.hpp
lib/gui/primitives/: IShape.hpp  line.hpp  rectancle.hpp
lib/hdlc/: CMakeLists.txt
lib/json/: CMakeLists.txt
lib/msgui/: CMakeLists.txt
lkr/: STM32F103C8Tx_FLASH.ld  stm32f103_128k.ld
scripts/: build.sh  com_init.sh  flash.sh  generate.sh  run.bat  run.sh  run_gdb.sh  run_target.sh
src/: CMakeLists.txt  app.cpp  app.hpp  board.cpp  board.hpp  buffer.hpp  handler.cpp  handler.hpp  hw_utils.c  hw_utils.h  logger.cpp  logger.hpp  main.cpp  memoryHelpers.hpp  pwmChannel.cpp  pwmChannel.hpp  readerWriterBuffer.hpp  stm32f10x_conf.h  stm32f10x_it.c  stm32f10x_it.cpp  stm32f10x_it.h  stm32f4xx_it.c  stm32f4xx_it.h  stm32includes.hpp  syscalls.cpp  systick.cpp  systick.hpp  tasking.c  tasking.h  tasking_asm.S  types.hpp  usart.cpp  usart.hpp  utils.cpp  utils.h  utils.hpp
src/app/: app.cpp  app.hpp  channelMenu.cpp  channelMenu.hpp  channelSetting.hpp  context.cpp  context.hpp  contextInterface.hpp  menu.cpp  menu.hpp  timeSetting.hpp
src/app/settings/: channel.cpp  channel.hpp  channelSettings.cpp  channelSettings.hpp  channelsSettings.cpp  channelsSettings.hpp  lightChannel.cpp  lightChannel.hpp  timeEventSettings.cpp  timeEventSettings.hpp
src/app/statemachines/: appSm.cpp  appSm.hpp  channelSettingsSm.hpp  events.hpp  fsm.hpp  helpers.hpp  menuSm.hpp  setSunriseSm.hpp  setSunshineSm.hpp  setTimeSm.hpp  states.hpp  timeSettingsSm.hpp
src/bsp/: board.cpp  board.hpp  button.hpp  led.hpp  onewire.hpp  pwm.hpp
src/bsp/Stm32_Black_Pill/: boardSpecific.cpp  button.cpp  config.hpp  led.cpp  onewire_stm32.cpp  pwm_stm32.cpp  spi.cpp
src/bsp/stm32f1_common/: helpers.cpp  helpers.hpp
src/bsp/x86/: boardSpecific.cpp  led.cpp  window.cpp
src/cmake/: common_sources.cmake  stm32_sources.cmake  x86_sources.cmake
src/cmake/bsp/: common.cmake  stm32_black_pill.cmake  stm32f1_common.cmake  x86.cmake
src/containers/: buffer.hpp  staticVector.hpp
src/controller/: channelController.cpp  channelController.hpp  lightController.hpp  sunlightController.cpp  sunlightController.hpp
src/dispatcher/: ChannelHandler.cpp  ChannelHandler.hpp  IHandler.hpp  RtcHandler.cpp  RtcHandler.hpp  dispatcher.cpp  dispatcher.hpp  fwd.hpp  handlerBase.cpp  handlerBase.hpp
src/display/: colors.hpp  display.cpp  display.hpp  font.cpp  font.hpp  images.cpp  images.hpp
src/drivers/devices/: ds18b20.cpp  ds18b20.hpp
src/drivers/interfaces/: onewire.hpp  onewireImpl.hpp
src/drivers/lcd/: display.hpp  displayDriver.hpp  font.cpp  font.hpp  icons.cpp  icons.hpp
src/drivers/lcd/pcd8544/: display.cpp  displayPcd8544.cpp  displayPcd8544.hpp
src/drivers/lcd/sfml/: displaySfml.cpp  displaySfml.hpp
src/drivers/lcd/simulator_x86/: display.cpp
src/drivers/lcd/smfl/: displaySmfl.cpp  displaySmfl.hpp
src/gui/: IWidget.hpp  bufferedText.hpp  element.hpp  graphicDriver.hpp  image.hpp  keys.hpp  menu.hpp  moveCursor.hpp  option.hpp  text.hpp  vector2d.hpp  widgetBase.hpp  window.hpp
src/gui/primitives/: rectancle.hpp
src/hal/core/: backupRegisters.hpp
src/hal/memory/: eeprom.hpp
src/hal/serial/: serial.hpp
src/hal/stm32/: config.hpp  stdstub.hpp
src/hal/stm32/core/: core_stm32.cpp
src/hal/stm32/memory/: eeprom_stm32.cpp
src/hal/stm32/serial/: serial_stm32.cpp
src/hal/stm32/time/: rtc_stm32.cpp  sleep_stm32.cpp  time_stm32.cpp
src/hal/stm32/utils/: assert_stm32.cpp
src/hal/time/: rtc.hpp  sleep.hpp  time.hpp
src/hal/x86/: config.hpp
src/hal/x86/core/: backupRegisters_x86.cpp  criticalSection_x86.cpp
src/hal/x86/fs/: file_x86.cpp  filesystem_x86.cpp
src/hal/x86/memory/: eeprom_x86.cpp
src/hal/x86/net/http/: asyncHttpServer_x86.cpp  httpConnection_x86.cpp  httpConnection_x86.hpp
src/hal/x86/net/socket/: tcpClient_x86.cpp  tcpServer_x86.cpp  tcpSession.cpp  tcpSession.hpp  websocket_x86.cpp
src/hal/x86/serial/: serial_x86.cpp
src/hal/x86/time/: rtc_x86.cpp  sleep_x86.cpp  time_x86.cpp
src/hal/x86/utils/: assert_x86.cpp
src/logger/: logger.cpp  logger.hpp  loggerConf.cpp  loggerConf.hpp
src/pwm/: channelsGroup.cpp  channelsGroup.hpp
src/rtc/: rtc.cpp  rtc.hpp
src/serializer/: serializer.hpp
src/state_machine/: bootloader_sm.hpp  handler_sm.hpp  menu.hpp
src/timer/: IManager.hpp  ITimer.hpp  intervalTimer.cpp  intervalTimer.hpp  manager.cpp  manager.hpp  timeoutTimer.cpp  timeoutTimer.hpp
src/utils/: constants.hpp  types.hpp
test/: CMakeLists.txt
test/ST/framework/: run_target.py
test/UT/: CMakeLists.txt  main.cpp
test/UT/controller/: lightControllerTests.cpp  sunlightControllerTests.cpp
test/bsp/x86_test/: boardSpecific_x86_testing.cpp
test/cmake/: bsp_testing_sources.cmake  e2e_sources.cmake  production_sources.cmake  ut_sources.cmake
